--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.29.2",
     "leva": "^0.10.1",
     "next": "^16.0.8",
     "react": "^19.2.1",
